# Automake script for libStochMod
#
# This file is part of libStochMod.
# Copyright 2011-2017 Gabriele Lillacci.
#
# libStochMod is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# libStochMod is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with libStochMod.  If not, see <http://www.gnu.org/licenses/>.


SUBDIRS = src
ACLOCAL_AMFLAGS = -I m4
include_HEADERS = stochmod.h
