#	Automake script for
#
#	STOCHMOD/src
#
# 
#	Created by Gabriele Lillacci in December 2011.
#	Latest revision: December 2011.
#
#
#	This free software is available under the Creative Commons Attribution Non-Commercial Share Alike License.
#	You are permitted to use, share, copy, redistribute and adapt this software as long as appropriate credit
#	is given to the original author, all derivative works are distributed under the same license or a compatible one,
#	and this software and its derivatives are not used for commercial purposes.
#	For more information, visit http://creativecommons.org/licenses/by-nc-sa/3.0/ or contact
#	Creative Commons, 171 2nd Street, Suite 300, San Francisco, California, 94105, USA.


lib_LTLIBRARIES = libstochmod.la
libstochmod_la_SOURCES = autoreg.c stochrep.c syncirc.c lacgfp.c lacgfp2.c lacgfp3.c lacgfp4.c lacgfp5.c birthdeath.c lacgfp6.c lacgfp7.c lacgfp8.c iFF.c fbk.c lacgfp9.c lacgfp10.c synpi1.c